--- a/default.css
+++ b/default.css
@@ -10,6 +10,16 @@ div {
 	font-size: 10pt;
 }
 
+div.navtile{
+    width: 100%;
+    height: 100%;
+}
+
+td.navtile{
+    width: 50%;
+    height: 25%;
+}
+
 div.borders{
 	border: 3px solid black;
 }
