--- a/default.css
+++ b/default.css
@@ -12,26 +12,28 @@ div {
 
 div.navtile{
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 td.navtile{
     width: 33%;
-    height: 16%;
+    height: auto;
 }
 
 div.borders{
 	border: 3px solid black;
+    width: 100%; 
+    height: fit-content;
 }
 
 div.dialogbox{
 	border: 2px solid black; 
-	padding: 15px; 
-	width: 85%; 
-	height: 85%; 
+	margin-left: auto;
+	margin-right: auto;
+	width: auto;
+	height:fill-available;
+    top: 0;
 	position: absolute;
-	top: 0;
-	left: 0;
 	z-index: 1;
 	background-color: white;
 	text-align: center;
@@ -39,9 +41,50 @@ div.dialogbox{
 }
 
 div.tightform{
-	font-size: 12pt;
+	font-size: 10pt;
 }
 
 select.listbox{
     width: 95%;
+}
+
+.defaulthidden {
+    visibility: hidden;
+}
+
+body {
+    text-align: center;
+}
+
+.topcontainer{
+    width: 40%;
+    margin-left: auto;
+	margin-right: auto;
+	width: 50em;
+	text-align: left;
+}
+
+.innercontainer {
+    width: 100%; 
+    height: auto;
+}
+
+table.navpanel {
+    width: 100%;
+    height: auto;
+    table-layout: auto;
+    padding: 0px;
+}
+
+.smaller {
+    font-size: 8pt;
+}
+
+.simboxtext {
+    font-size: 11pt;
+}
+
+.bigred {
+    font-size: 18pt;
+    color: red;
 }
