centred the dialog boxes, wrapped the dialog methods.  Allowed acknowledgement of the weak signal dialog - this functionality may need some work - could be annoying in the cockpit.

--- a/default.css
+++ b/default.css
@@ -40,7 +40,7 @@ div.dialogbox{
     padding: 10px;
     z-index: auto;
     position: absolute;
-    top: 0; left: 0;
+    top: 50%; left: 50%;
     margin: auto;
 }
 
